--- a/index.html
+++ b/index.html
@@ -143,7 +143,35 @@
             </div>
         </nav>
     </header>
-    
+    <main>
+        <section class="hero-section bg-warning">
+            <div class="container">
+                <div class="row align-items-center pb-3 pb-md-6 pb-xl-8">
+                    <div class="left-panel col-12 col-xl-6">
+                        <div class="d-flex align-items-center gap-2 pb-3">
+                            <p class="text-19 text-primary fw-semibold">SAVANA YOGA</p>
+                            <div class="para-short"></div>
+                        </div>
+                        <h1 class="fw-light font-family-cormorant pb-2 text-secondary lh-1">Bend your mind, inspire
+                            yourself</h1>
+                        <p class="pb-6 text-success">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit
+                            tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.</p>
+                        <div class="d-flex align-items-center gap-6">
+                            <a href="#" class="btn bg-primary text-light py-1 px-4">Get Started <img class="ps-1"
+                                    src="./assets/images/icons/right-arrow.png" alt=""></a>
+                            <a href="#" class="text-secondary link-deco">Contact Us <img class="ps-1"
+                                    src="./assets/image/phone.png" alt="Phone Icon"></a>
+                        </div>
+                    </div>
+                    <div class="right-panel col-12 offset-xl-1 col-xl-5">
+                        <img class="img-fluid" src="./assets/image/Yogapractice.png" alt="Yoga">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+    </main>
     <footer class="bg-secondary">
         <div class="container pt-7">
             <div class="row g-5 pb-6">
